--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -39,12 +39,12 @@ jobs:
     needs: build
     steps: 
     - name: Download a Build Artifact
-      uses: actions/download-artifact@v2.1.0
+      uses: actions/download-artifact@v4
       with: 
         name: webapp
         path: webapp
     - name: Deploy web app
-      uses: azure/webapp-deploy@v2
+      uses: azure/webapps-deploy@v2
       with:
         app-name: github-yaml-Luca
         publish0profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
