--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -47,5 +47,5 @@ jobs:
       uses: azure/webapps-deploy@v2
       with:
         app-name: github-yaml-Luca
-        publish0profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
         package: webapp
